test/fail/interpolation/interp_no_value.lly
#[
SyntaxError: Empty interpolation block.
    from interp_no_value.lly:6
]#

var v = $"^(  )"
